# horizon

./: .buildinfo  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  class_try.py  command  converter.bat  copy_external_dependencies.py  genindex.html  horizon-notebook.ipynb  horizon.html  horizon.py  horizon.ros.html  horizon.solvers.html  horizon.tests.html  horizon.utils.html  horizon_gui.py  includeme.html  index.html  modules.html  objects.inv  py-modindex.html  qrc_resources.py  resources.qrc  search.html  searchindex.js  setup.cfg  setup.py  setup_extensions.bash  step.py  upload_package.py  widget1_ui.py
_sources/: horizon.rst.txt  horizon.tests.rst.txt  horizon.utils.rst.txt  includeme.rst.txt  index.rst.txt
_static/: documentation_options.js
classes/: function.py  gui_receiver.py  misc_function.py  nodes.py  problem.py  state_variables.py
custom_css/: tab.css
custom_functions/: highlighter.py
custom_widgets/: box_function.py  box_state_var.py  console_logger.py  highlight_delegate.py  horizon_line.py  line_edit.py  misc.py  multi_slider.py  on_destroy_signal_window.py  penis.py  provetta.py  slider_try2.py  sliding_bar.py  something.py  spinbox_line.py  try_sliders.py
docker/: Dockerfile  build.sh  configuration.json  instructions  run.sh  upload.sh
docker/rviz/: launcher.launch
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  horizon.ros.rst  horizon.rst  horizon.solvers.rst  horizon.tests.rst  horizon.transcriptions.rst  horizon.utils.rst  index.rst  modules.rst
horizon/: function.py  functions.py  misc_function.py  problem.py  state_variables.py  type_doc.py  variables.py
horizon/cpp/: CMakeLists.txt  CMakeLists.txt.orig  horizon_parsing_test.cpp  pyilqr.cpp  pyilqr_helpers.h  pysqp.cpp  pysqp_helpers.h
horizon/cpp/src/: codegen_function.cpp  codegen_function.h  horizon_parser.cpp  horizon_parser.h  ilqr.cpp  ilqr.h  ilqr_backward_pass.cpp  ilqr_forward_pass.cpp  ilqr_impl.h  ilqr_test.cpp  profiling.cpp  profiling.h  sqp.h  sqp_test.cpp  wrapped_function.cpp  wrapped_function.h
horizon/cpp/tests/: CMakeLists.txt  testCasadiUtils.cpp  testQr.cpp
horizon/examples/: car_obstacles_ilqr.py  cart_pole.mat  cart_pole.py  cart_pole_all.py  cart_pole_fd.py  cart_pole_fd_ilqr.py  cart_pole_feedback.py  cart_pole_feedback_solver.py  cart_pole_feedback_sqp.py  cart_pole_final_time.py  cart_pole_log.mat  cart_pole_manual.mat  cart_pole_manual.py  cart_pole_sin.py  collision_example.py  free_fall.py  ilqr_test.py  ilqr_test_basic.py  ilqr_test_sparse.py  ilqr_test_unicycle.py  lwr_ik.py  opti_spot.mat  opti_spot.py  package.xml  quadruped.py  quadruped_jump.py  quadruped_jump_fd.py  quadrupedal_walk.py  rope_jump.py  roped_robot.py  roped_robot_jump.py  roped_robot_rappel.py  roped_robot_sim.py  spot.py  spot_backflip_manual.mat  spot_backflip_manual.py  spot_direct_collo.mat  spot_direct_collo.py  spot_fd.py  spot_fd_manual.py  (+35 more)
horizon/examples/cart_pole/: cart_pole_fd.py  cart_pole_feedback_solver.py  cart_pole_feedback_sqp.py  cart_pole_final_time.py
horizon/examples/launch/: cart_pole.launch  cart_pole_xy.launch  free_fall.launch  free_fall.rviz  quadruped.launch  quadruped.rviz  quadruped_template.launch  qudruped_jump.rviz  (+2 more)
horizon/playground/: cart_pole_fd.py  cart_pole_fd_ilqr.py  cart_pole_feedback.py  cart_pole_feedback_solver.py  cart_pole_sin.py  collision_example.py  free_fall.py  lwr_ik.py  quadruped_jump.py  quadruped_jump_fd.py  quadruped_jump_plot.py  quadrupedal_walk.py  rope_jump.py  spot_ilqr.py  spot_ilqr_balance.py  spot_ilqr_front_jump.py  spot_ilqr_jump.py  sqp_problem.py  swing.py  trial_single_var.py  try_variable_conversion.py  unit_mass_collocation.py  unit_mass_xy.py
horizon/ros/: replay_trajectory.py  replay_trajectory.py.orig  tf_broadcaster_simple.py  utils.py
horizon/solvers/: blocksqp.py  ilqr.py  ipopt.py  nlpsol.py  solver.py  sqp.py
horizon/tests/: class_try.py  collision_tests.py  horizon_old.py  ilqr_tests.py  jac_test.py  paramter_support_test.py  solver_lq_test.py  solver_lq_test_GNSSQP.py  something.py  test_examples.py  test_get_set.py  test_horizon.py  test_parameters.py
horizon/transcriptions/: integrators.py  methods.py  transcriptor.py  trial_integrator.py
horizon/utils/: appoggino.py  casadi_kin_dyn.py  ci_solver.py  collision.py  integrators.py  kin_dyn.py  mat_storer.py  plotter.py  refiner.py  replayer.py  replayer_fd.py  replayer_fd_mx.py  replayer_mx.py  replayer_opti_stack.py  resampler_trajectory.py  rti.py  send_to_gazebo.py  transcription_methods.py  utils.py  vis_refiner_global.py  vis_refiner_local.py
horizon_gui/: __init__.py  converter.bat  converter.sh  converter_try.sh  definitions.py  frames.gv  try.pkl
horizon_gui/custom_css/: button_new.css  button_old.css  tab.css
horizon_gui/custom_functions/: highlighter.py  txt_to_fun.py
horizon_gui/custom_widgets/: bounds_line.py  box_state_var.py  console_logger.py  display_line.py  function_line.py  function_tab.py  generic_display_mask.py  horizon_line.py  infinity_spinbox.py  led_indicator.py  limits_line.py  line_edit.py  main_interface.py  multi_function_box.py  multi_slider.py  multi_slider_v1.py  node_box_line.py  nodes_spinbox.py  option_container.py  plotter.py  rubberband_mechanics.py  separation_line.py  slider_try1.py  slider_try3.py  spinbox_line.py  starting_screen.py
horizon_gui/gui/: dynamics_handler.py  gui_receiver.py  main.py  main_try.py  starting_screen_ui.py  txt_to_fun.py  untitled.py  widget1_ui.py
horizon_gui/settings/: gui_settings.ini
horizon_gui/tests/: tries.py
horizon_gui/ui/: functions_module.ui  starting_screen.ui  untitled.ui  variables_module.ui  widget1.ui
ui/: widget1.ui  widget1_try.ui
(+109 files in other folders)
